--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link" href="./work.html">Work Exprience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./project.html">Projectss</a>
+            <a class="nav-link" href="./project.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./skill.html">Skills</a>
