--- a/education.html
+++ b/education.html
@@ -7,13 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="./styles_education.css" type="text/css">
     <title>Education - Bibek Gyawali</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="align-items: center;">
-        <a class="navbar-brand" href="#">Bibek Gyawali </a>
+        <a class="navbar-brand" href="./index.html">Bibek Gyawali </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,15 +39,49 @@
           </ul>
         </div>
       </nav>
-      
-      <footer>
-          <div class="footer-1">
-            <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    Launch demo modal
-                </button>
+      <center>
+      <div class="container-fluid">
+        <br/><br/>
+        <h3><a href="https://www.unt.edu/" target="_blank">University of North Texas, Denton TX</a></h3>
+        <p>August 2018 - Present</p>
+        <p>Major: Computer Science<br>
+        GPA: 4.0<br>
+        Expected Graduation: December 2020<br><br>
+        </p>
+
+        <!-- Progress Bar-->
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="50" style="width:90%">
+            <span>90% Complete</span>
           </div>
-      </footer>
+        </div>
+
+
+
+        <br><hr><br>
+        <a href="https://www.northlakecollege.edu/pages/default.aspx" target="_blank"><h3>Northlake College, Irving TX</h3></a>
+        <p>August 2016 - May 2018</p>
+        <p>Major: Computer Science<br>
+          GPA: 4.0<br>
+          Graduation: May 2018<br>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="50" style="width:100%">
+            <span>100% Complete</span>
+          </div>
+        </div>
+
+      </div>
+      </center>
+      <div class="footer_1">
+        <center>
+          <div class="footer_text">Find me on:</div>
+          <span><a href="https://www.linkedin.com/in/bibek-gyawali-524431172/" target="_blank" class="fa fa-linkedin"></a></span>
+          <span><a href="https://github.com/bibekgyawali11" target="_blank" class="fa fa-github"></a></span>
+          <span><a href="https://www.facebook.com/bibek.gyawali.73" target="_blank" class="fa fa-facebook"></a></span>
+          <span><a href="https://www.instagram.com/bibekgyawali11/" target="_blank" class="fa fa-instagram"></a></span>
+        </center>
+      </div>
 
 
     <!-- Optional JavaScript -->
