--- a/skill.html
+++ b/skill.html
@@ -15,7 +15,8 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="./styles_skill.css" type="text/css" />
     <title>Skills - Bibek Gyawali</title>
   </head>
 
@@ -24,7 +25,7 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark"
       style="align-items: center;"
     >
-      <a class="navbar-brand" href="#">Bibek Gyawali </a>
+      <a class="navbar-brand" href="./index.html">Bibek Gyawali </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -52,7 +53,7 @@
             <a class="nav-link" href="./project.html">Projects</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./skill.html"
+            <a class="nav-link" href="#"
               >Skills<span class="sr-only">(current)</span></a
             >
           </li>
@@ -60,20 +61,15 @@
       </div>
     </nav>
 
-    <footer>
-      <div class="footer-1">
-        <!-- Button trigger modal -->
-        <button
-          type="button"
-          class="btn btn-primary"
-          data-toggle="modal"
-          data-target="#exampleModal"
-        >
-          Launch demo modal
-        </button>
-      </div>
-    </footer>
-
+    <div class="footer_1">
+      <center>
+        <div class="footer_text">Find me on:</div>
+        <span><a href="https://www.linkedin.com/in/bibek-gyawali-524431172/" target="_blank" class="fa fa-linkedin"></a></span>
+        <span><a href="https://github.com/bibekgyawali11" target="_blank" class="fa fa-github"></a></span>
+        <span><a href="https://www.facebook.com/bibek.gyawali.73" target="_blank" class="fa fa-facebook"></a></span>
+        <span><a href="https://www.instagram.com/bibekgyawali11/" target="_blank" class="fa fa-instagram"></a></span>
+      </center>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
