--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
         Science. I am graduating on December 2020. I am passionate about
         programming. I am a learner which never stops learning new things
         everyday. Currently, I am doing my internship at JP Morgan Chase in
-        Plano TX as a Software Engineer Intern <br />
+        Plano TX as a Software Engineer Intern <br /><br/>
+        <center>
+          <a href="./Bibek_resume.pdf" download="Bibek_resume.pdf">
+            <button>Download my Resume</button>
+        </a>
+        </center>
       </div>
     </div>
     <div class="footer_1">
