--- a/project.html
+++ b/project.html
@@ -15,7 +15,8 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="./styles_project.css" type="text/css" />
     <title>Projects- Bibek Gyawali</title>
   </head>
 
@@ -60,19 +61,15 @@
       </div>
     </nav>
 
-    <footer>
-      <div class="footer-1">
-        <!-- Button trigger modal -->
-        <button
-          type="button"
-          class="btn btn-primary"
-          data-toggle="modal"
-          data-target="#exampleModal"
-        >
-          Launch demo modal
-        </button>
-      </div>
-    </footer>
+    <div class="footer_1">
+      <center>
+        <div class="footer_text">Find me on:</div>
+        <span><a href="https://www.linkedin.com/in/bibek-gyawali-524431172/" target="_blank" class="fa fa-linkedin"></a></span>
+        <span><a href="https://github.com/bibekgyawali11" target="_blank" class="fa fa-github"></a></span>
+        <span><a href="https://www.facebook.com/bibek.gyawali.73" target="_blank" class="fa fa-facebook"></a></span>
+        <span><a href="https://www.instagram.com/bibekgyawali11/" target="_blank" class="fa fa-instagram"></a></span>
+      </center>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
