--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
   </head>
 
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark"
-      style="align-items: center;"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position:fixed; width:100%;">
       <a class="navbar-brand" href="#">Bibek Gyawali </a>
       <button
         class="navbar-toggler"
@@ -63,7 +60,7 @@
         </ul>
       </div>
     </nav>
-
+    
     <div class="image_holder">
       <div class="image_frame">
         <img
@@ -78,7 +75,8 @@
         Science. I am graduating on December 2020. I am passionate about
         programming. I am a learner which never stops learning new things
         everyday. Currently, I am doing my internship at JP Morgan Chase in
-        Plano TX as a Software Engineer Intern <br /><br/>
+        Plano TX as a Software Engineer Intern
+        <br /><br/>
         <center>
           <a href="./Bibek_resume.pdf" download="Bibek_resume.pdf">
             <button>Download my Resume</button>
