--- a/education.html
+++ b/education.html
@@ -56,15 +56,15 @@
           </div>
         </div>
 
-
-
         <br><hr><br>
         <a href="https://www.northlakecollege.edu/pages/default.aspx" target="_blank"><h3>Northlake College, Irving TX</h3></a>
         <p>August 2016 - May 2018</p>
         <p>Major: Computer Science<br>
           GPA: 4.0<br>
           Graduation: May 2018<br>
+          <span><i>Green Diploma</i></span>  |   <span><i>SAGE Scholar</i></span>
         </p>
+        <br>
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="50" style="width:100%">
             <span>100% Complete</span>
