--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
   <body>
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-dark"
-      style="align-items: center;"
+      style="position:fixed; width:100%"
     >
       <a class="navbar-brand" href="./index.html">Bibek Gyawali </a>
       <button
@@ -61,6 +61,32 @@
       </div>
     </nav>
 
+    <center>
+      <div class="container-fluid">
+        adfakf
+        afmaf
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        adfakfafa<br><br>
+        anvKna
+        ankxnakd
+      </div>
+    </center>
     <div class="footer_1">
       <center>
         <div class="footer_text">Find me on:</div>
