--- a/work.html
+++ b/work.html
@@ -21,10 +21,7 @@
   </head>
 
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark"
-      style="position:fixed; width:100%"
-    >
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="./index.html">Bibek Gyawali </a>
       <button
         class="navbar-toggler"
@@ -60,33 +57,6 @@
         </ul>
       </div>
     </nav>
-
-    <center>
-      <div class="container-fluid">
-        adfakf
-        afmaf
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        adfakfafa<br><br>
-        anvKna
-        ankxnakd
-      </div>
-    </center>
     <div class="footer_1">
       <center>
         <div class="footer_text">Find me on:</div>
