added work page template

--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-default navbar-static-top navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="./index.html">Bibek Gyawali </a>
       <button
         class="navbar-toggler"
@@ -57,6 +57,37 @@
         </ul>
       </div>
     </nav>
+
+    <div class="container1">
+      <div class="job_item">
+        <div class="job_title">
+          Manager, Lovers Egg Roll , Plano TX
+        </div>
+
+        <div class="job_period">
+          March 2015 to Present
+        </div>
+      </div>
+
+      <div class="job_item">
+        <div class="job_title">
+          IT Intern, WorkForce Solutions Greater Dallas
+        </div>
+        <div class="job_period">
+          June 2019 to August 2019
+        </div>
+      </div>
+
+      <div class="job_item">
+        <div class="job_title">
+          Quality Control Assistant, Samsung Company
+        </div>
+        <div class="job_period">
+          August 2015 to December 2015
+        </div>
+      </div>
+
+    </div>
     <div class="footer_1">
       <center>
         <div class="footer_text">Find me on:</div>
@@ -64,7 +95,6 @@
         <span><a href="https://github.com/bibekgyawali11" target="_blank" class="fa fa-github"></a></span>
         <span><a href="https://www.facebook.com/bibek.gyawali.73" target="_blank" class="fa fa-facebook"></a></span>
         <span><a href="https://www.instagram.com/bibekgyawali11/" target="_blank" class="fa fa-instagram"></a></span>
-      </center>
     </div>
 
     <!-- Optional JavaScript -->
