--- a/work.html
+++ b/work.html
@@ -58,35 +58,51 @@
       </div>
     </nav>
 
-    <div class="container1">
+    <div class="whole_container">
       <div class="job_item">
         <div class="job_title">
-          Manager, Lovers Egg Roll , Plano TX
+          Manager, Lovers Egg Roll, Plano TX
         </div>
-
         <div class="job_period">
           March 2015 to Present
+        </div>
+        <div class="job_function">
+          <ul>
+            <li>Accountable for budgeting, cost control, payroll, general accounting, profit, and loss</li>
+            <li>Recruited, hired, trained and managed issues/feedback within 15 staffs to maintain city standards</li>
+          </ul>
         </div>
       </div>
 
       <div class="job_item">
         <div class="job_title">
-          IT Intern, WorkForce Solutions Greater Dallas
+          IT Intern, Workforce Solutions Greater Dallas, Dallas TX
         </div>
         <div class="job_period">
           June 2019 to August 2019
         </div>
+        <div class="job_function">
+          <ul>
+          <li>Worked for the IT department with Day to Day operation</li>
+          <li>Helped with Research, Data Analysis, and Project management</li>
+          <li>Worked in Correlation with Top Tech Sector Clients</li>
+          </ul>
+        </div>
       </div>
-
-      <div class="job_item">
+        <div class="job_item">
         <div class="job_title">
-          Quality Control Assistant, Samsung Company
+          Quality Control Assistant, Samsung Company, Copell TX
         </div>
         <div class="job_period">
           August 2015 to December 2015
         </div>
+        <div class="job_function">
+          <ul>
+            <li>Filled out and submitted paperwork for approved operations, reports for critical violations</li>
+            <li>Conducted analysis to address defects in smartphones which led to the failure of inspection</li>
+          </ul>
+        </div>
       </div>
-
     </div>
     <div class="footer_1">
       <center>
