fixed footer hover

--- a/project.html
+++ b/project.html
@@ -64,10 +64,10 @@
     <div class="footer_1">
       <center>
         <div class="footer_text">Find me on:</div>
-        <span><a href="https://www.linkedin.com/in/bibek-gyawali-524431172/" target="_blank" class="fa fa-linkedin"></a></span>
-        <span><a href="https://github.com/bibekgyawali11" target="_blank" class="fa fa-github"></a></span>
-        <span><a href="https://www.facebook.com/bibek.gyawali.73" target="_blank" class="fa fa-facebook"></a></span>
-        <span><a href="https://www.instagram.com/bibekgyawali11/" target="_blank" class="fa fa-instagram"></a></span>
+        <span><a href="https://www.linkedin.com/in/bibek-gyawali-524431172/" title="Linkedin" target="_blank" class="fa fa-linkedin"></a></span>
+        <span><a href="https://github.com/bibekgyawali11" title="Github" target="_blank" class="fa fa-github"></a></span>
+        <span><a href="https://www.facebook.com/bibek.gyawali.73" title="Facebook" target="_blank" class="fa fa-facebook"></a></span>
+        <span><a href="https://www.instagram.com/bibekgyawali11/" title="Instagram" target="_blank" class="fa fa-instagram"></a></span>
       </center>
     </div>
 
