--- a/project.html
+++ b/project.html
@@ -60,6 +60,54 @@
         </ul>
       </div>
     </nav>
+    <div class="container1">
+      <div class="project_item">
+        <div class="project_title">
+          Electronic Resturant Management System
+        </div>
+        <div class="project_period">
+          April 2020
+        </div>
+        <div class="project_function">
+          Sponsor/Organization: CSCE 3444 (Software Engineering Class)<br/>
+          Technologies Used: HTML, CSS, Javascript, PHP, Git, MySQL<br/>
+          Description: An electronic web based app which allows all the resturant day-to-day operations<br/>
+          <span><a href="https://github.com/bibekgyawali11/MWF-Burger-Joint" target="_blank">Github</a></span>
+          <span>  </span>
+          <span><a href="http://mwfburgerjoint.epizy.com/" target="_blank">Live-Demo</a></span>
+        </div>
+      </div>
+      <div class="project_item">
+        <div class="project_title">
+          Employer-Student Matching System, Education is Freedom
+        </div>
+        <div class="project_period">
+          October 2019
+        </div>
+        <div class="project_function">
+          Sponsor/Organization: JP Morgan Chase Co, Plano TX<br/>
+          Technologies Used: HTML, CSS, Node.js, Express, Javascript, Python<br/>
+          Description: A system for non-profit organization, Education is Freedom, to match students and employers <br/>
+          <span><a href="https://github.com/Dallas19/team-11" target="_blank">GitHub</a></span>
+        </div>
+      </div>
+      <div class="project_item">
+        <div class="project_title">
+          Decentralized Health Care System, HACKUNT
+        </div>
+        <div class="project_period">
+          April 2019
+        </div>
+        <div class="project_function">
+          Sponsor/Organization: University of North Texas, Denton TX <br/>
+          Technologies Used: Blockstack, GIT, HTML, CSS, JavaScript, BlockChain <br/>
+          Description: A decentralized system for hospital to share information between patient and doctor
+          without the need of decentralized server <br/>
+          <span><a href="https://github.com/vektor-tech/hackunt">GitHub</a></span>
+          <span><a href="https://devpost.com/software/decentralized-health-care-system">Devpost</a></span>
+        </div>
+      </div>
+    </div>
 
     <div class="footer_1">
       <center>
