skill page updated

--- a/skill.html
+++ b/skill.html
@@ -60,6 +60,30 @@
         </ul>
       </div>
     </nav>
+    <h2 style="margin:2px; padding:5px; font-weight: bolder;">Technical Skills</h2>
+    <div class="container1">
+      <div class="skill_item">Programming Skills: C, C++, Python, Java, PHP</div>
+      <div class="skill_item">Web Designing: HTML, CSS, JavaScript, React, Bootstrap</div>
+      <div class="skill_item">Database Skills: Microsoft Access, SQL, MongoDB, Oracle, AWS DynamoDB</div>
+      <div class="skill_item">Operating Systems: Windows, UNIX, Linux</div>
+      <div class="skill_item">Other: Office 365, Node.js, GIT, BlockStack, Project Management, Research & Analytics, Report Writing</div>
+    </div>
+    <hr>
+    <h2 style="margin:2px; padding:5px; font-weight: bolder;">Relevant Courses</h2>
+    <div class="skill_item">
+      <ul>
+        <li>Computing Fundamentals I & II</li>
+        <li>Computer Networks & Systems Programming</li>
+        <li>Programming I & II</li>
+        <li>Computer Security</li>
+        <li>Database Management Systems</li>
+        <li>Software Engineering Capstone</li>
+        <li>Secure Ecommerce & Internet Programming</li>
+        <li>Formal Languages & Automata</li>
+        <li>Logic Design</li>
+        <li>Data Structure & Algorithms</li>
+      </ul>
+    </div>
 
     <div class="footer_1">
       <center>
