--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="align-items: center;">
+    <nav class="navbar navbar-default navbar-static-top navbar-expand-lg navbar-dark bg-dark" style="align-items: center;">
         <a class="navbar-brand" href="./index.html">Bibek Gyawali </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
