--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position:fixed; width:100%;">
+    <nav class="navbar navbar-default navbar-static-top navbar-expand-lg navbar-dark bg-dark" style="position:fixed; width:100%;">
       <a class="navbar-brand" href="#">Bibek Gyawali </a>
       <button
         class="navbar-toggler"
