--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
 
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark"
+      class="navbar navbar-default navbar-static-top navbar-expand-lg navbar-dark bg-dark"
       style="align-items: center;"
     >
       <a class="navbar-brand" href="./index.html">Bibek Gyawali </a>
