--- a/work.html
+++ b/work.html
@@ -108,6 +108,7 @@
       <center>
         <div class="footer_text">Find me on:</div>
         <span><a href="https://www.linkedin.com/in/bibek-gyawali-524431172/" title="Linkedin" target="_blank" class="fa fa-linkedin"></a></span>
+        <span><a href="https://twitter.com/bibekgyawali11" title="Twitter" target="_blank" class="fa fa-twitter"></a></span>
         <span><a href="https://github.com/bibekgyawali11" title="Github" target="_blank" class="fa fa-github"></a></span>
         <span><a href="https://www.facebook.com/bibek.gyawali.73" title="Facebook" target="_blank" class="fa fa-facebook"></a></span>
         <span><a href="https://www.instagram.com/bibekgyawali11/" title="Instagram" target="_blank" class="fa fa-instagram"></a></span>
